--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: welcome
-        image: 20152282/jenkins-welcome-app:548b4ba
+        image: 20152282/jenkins-welcome-app:cdd2ef4:548b4ba
         ports:
         - containerPort: 8080
 
